js/js.translator/testData/incremental/invalidation/companionInlineFunction/lib1/l1.2.kt
class MyClass1 {
    class InternalClass {
        companion object {
            inline fun companionMethod() = 2
        }
    }
}
